log

Sun 17 Mar 2024 12:07:28 AM UTC: 
In file included from test.c:1:
exercises.c:1:3: error: stray ‘#’ in program
    1 | a #include <ctype.h>
      |   ^
exercises.c:1:1: error: unknown type name ‘a’
    1 | a #include <ctype.h>
      | ^
exercises.c:1:12: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘<’ token
    1 | a #include <ctype.h>
      |            ^
In file included from /nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/stdlib.h:395,
                 from exercises.c:4,
                 from test.c:1:
/nix/store/4pqv2mwdn88h7xvsm7a5zplrd8sxzvw0-glibc-2.35-163-dev/include/sys/types.h:33:9: error: unknown type name ‘__u_char’
   33 | typedef __u_char u_char;
      |         ^~~~~~~~
Compilation failed
cd86e08
Sun 17 Mar 2024 12:07:34 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
f07c99b
Sun 17 Mar 2024 12:18:12 AM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 10/70
00ff4cf
Sun 17 Mar 2024 12:40:23 AM UTC: 
 exercises.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:29:7: error: unused variable ‘tempInicial’ [-Werror=unused-variable]
   29 |   int tempInicial;
      |       ^~~~~~~~~~~
exercises.c:28:7: error: unused variable ‘tempFinal’ [-Werror=unused-variable]
   28 |   int tempFinal;
      |       ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
c5078d6
Sun 17 Mar 2024 12:40:48 AM UTC: 
 exercises.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|6
total_score: 10/70
22fd36f
